--- a/src/components/signup.css
+++ b/src/components/signup.css
@@ -26,3 +26,28 @@
 a{
   text-decoration: none;
 }
+
+.welcomeText{
+  margin-top:250px;
+  margin-left:50px;
+  font-size:100px ;
+  font-weight: bold;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.fuseText{
+  margin-left:50px;
+font-size: 30px;
+font-family: Arial, Helvetica, sans-serif;
+}
+.lastText{
+  margin-right:500px;
+
+}
+
+.images{
+  margin-left:50px;
+
+}
+.lastDiv{
+  display: flex;
+}
